--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Test Page For QRCode Inspector Tool</title>
     </head>
     <body>
-        <h1>Lorem Ipsum</h1>
+        <h1>Lorem Ipsum: Test Page For QRCode Inspector Tool</h1>
         <hr/>
         <h3 id="faq">Opening Paragraph</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
